fix alignment

--- a/main.css
+++ b/main.css
@@ -249,9 +249,6 @@ div.modal-footer {
     background-color: #085DAD;
 }
 
-div.modal-body{
-}
-
 div.modal-rating {
     margin-left: 20px;
     unicode-bidi: bidi-override;
